# Chinese-calendar-historical-data

./: README.md  calendar.cabal
backend/: calendar.cabal
backend/data/: dynasties.json
backend/src/: Main.hs
backend/src/Model/: DateCN.hs  Dynasty.hs  Era.hs  Identifiers.hs  Literal.hs
data/: dynasties.json  eras.json
script/python/: README.md  date_crawler.py
src/: Main.hs
src/Model/: Dynasty.hs
