cabal-version:      2.4
name:               calendar
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mmzk1526
maintainer:         yc4120@ic.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    data/*.json

executable calendar
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        aeson ^>=2.1,
        bytestring ^>=0.11,
        text ^>=1.2,
    hs-source-dirs:   src
    default-language: Haskell2010
