cabal-version:      2.4
name:               calendar
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mmzk1526
maintainer:         yc4120@ic.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    data/*.json

executable calendar
    main-is:          Main.hs
    other-modules:
        Model.DateCN,
        Model.Dynasty,
        Model.Era,
        Model.Identifiers,
        Model.Literal
    default-extensions:
        BlockArguments,
        DataKinds,
        DeriveAnyClass,
        DeriveGeneric,
        DerivingStrategies,
        DuplicateRecordFields,
        GeneralisedNewtypeDeriving,
        InstanceSigs,
        OverloadedRecordDot,
        OverloadedStrings,
        ScopedTypeVariables,
        TypeApplications,
        TypeFamilies
    build-depends:
        base,
        aeson ^>=2.1,
        bytestring ^>=0.11,
        containers ^>=0.6,
        mmzk-typeid ^>=0.2,
        text ^>=2.0,
        transformers ^>=0.6,
    hs-source-dirs:   src
    default-language: Haskell2010
